edited and added some backend structurial logic